feat(api): add pupil ranking and class size to parent portal
Implement a ranking mechanism in ParentPortalService that calculates a
pupil's position and total class size based on their average marks
relative to classmates for a specific exam. Update ParentPortalDto
to include these new fields in the report card data.

Also update .gitignore to exclude scheduled backup zip files.